--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "sort-by": "^0.0.2",
+    "sweetalert2": "^11.10.2",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
