--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "firebase": "^10.7.1",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "sort-by": "^0.0.2",
